# fortnite_source_code

./: .gitignore  Cargo.toml  build.rs  build_shaders.sh
src/: camera.rs  cube.metal  input.rs  main.rs  platform.rs  render.rs  resource.rs  triangle.metal
src/shaders/: normals.metal  pos_uv.air  pos_uv.metal  pos_uv.metallib  shadertypes.h  transform.metal  triangle.metal  triangle.wgsl
