[package]
name = "bs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
env_logger = "0.11.8"
glam = { version = "0.30.9", features = ["bytemuck"] }
tobj = "4.0.3"
once_cell = "1.20"
block2 = "0.6"

# apple
objc2 = "0.6.3"


objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "std",
  "NSString",
  "NSDate",
  "NSNotification",
  "NSGeometry",
] }

# macOS UI (NSApplication, NSWindow)
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "std",
  "NSApplication",
  "NSGraphics",
  "NSMenu",
  "NSMenuItem",
  "NSResponder",
  "NSRunningApplication",
  "NSView",
  "NSViewController",
  "NSWindow",
  "NSWindowController",
  "NSEvent",
  "block2",
] }

# Metal + MetalKit (MTKView)
objc2-metal = { version = "0.3.2", default-features = false, features = [
  "std",
  "objc2-core-foundation",
  "MTLAllocation",
  "MTLDevice",
  "MTLBuffer",
  "MTLArgument",
  "MTLCommandQueue",
  "MTLCommandBuffer",
  "MTLCommandEncoder",
  "MTLBlitCommandEncoder",
  "MTLRenderPipeline",
  "MTLRenderCommandEncoder",
  "MTLResource",
  "MTLRenderPass",
  "MTLLibrary",
  "MTLPixelFormat",
  "MTLDrawable",
  "MTLTypes",
  "MTLTexture",
  "MTLAccelerationStructureTypes",
  "MTLVertexDescriptor",
  "MTLDepthStencil",
  "MTLHeap",
  "MTLBlitCommandEncoder"
] }

objc2-metal-kit = { version = "0.3.2", default-features = false, features = [
  "std",
  "objc2-app-kit",
  "objc2-quartz-core",
  "MTKView",
  "MTKTextureLoader",
  "block2",
] }

# MetalKit pulls some QuartzCore types in practice.
objc2-quartz-core = { version = "0.3.2", default-features = false, features = [] }
gltf = "1.4.1"
